--- a/ElevationTest/Base.lproj/Main.storyboard
+++ b/ElevationTest/Base.lproj/Main.storyboard
@@ -1,18 +1,100 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4451" systemVersion="13A461" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4488.2" systemVersion="13A524d" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3676"/>
+        <deployment defaultVersion="1536" identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3715.3"/>
     </dependencies>
     <scenes>
-        <!--class Prefix:identifier View Controller-->
+        <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
                 <viewController id="vXZ-lx-hvc" customClass="EAIViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Pe8-TO-401"/>
+                        <viewControllerLayoutGuide type="bottom" id="G5p-tB-NJE"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mN1-QM-8UU">
+                                <rect key="frame" x="137" y="518" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <state key="normal" title="Export">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="exportLocations:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="U1a-hl-g6E"/>
+                                </connections>
+                            </button>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="z8G-37-pqL">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="472"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                            </mapView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="egN-nX-3Rc">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="333"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="vXZ-lx-hvc" id="HJn-tI-ZTB"/>
+                                    <outlet property="delegate" destination="vXZ-lx-hvc" id="ziT-xc-lXC"/>
+                                </connections>
+                            </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lVt-jy-9gR">
+                                <rect key="frame" x="20" y="518" width="33" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <state key="normal" title="Start">
+                                    <color key="titleColor" red="0.0" green="0.50196081399917603" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="startAction:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="FH7-Sr-zwa"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bcT-fT-DaX">
+                                <rect key="frame" x="79" y="518" width="33" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <state key="normal" title="Stop">
+                                    <color key="titleColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="stopAction:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="dch-Mq-dhe"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rLJ-ol-D0L">
+                                <rect key="frame" x="257" y="518" width="43" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <state key="normal" title="Graph">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="lVt-jy-9gR" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="20" symbolic="YES" id="7pz-rC-DqR"/>
+                            <constraint firstItem="z8G-37-pqL" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="BLT-WF-Rxd"/>
+                            <constraint firstItem="mN1-QM-8UU" firstAttribute="baseline" secondItem="rLJ-ol-D0L" secondAttribute="baseline" id="Bkx-lw-Dfb"/>
+                            <constraint firstItem="z8G-37-pqL" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="top" id="E7i-4x-Bku"/>
+                            <constraint firstAttribute="bottom" secondItem="lVt-jy-9gR" secondAttribute="bottom" constant="20" symbolic="YES" id="IQs-Wt-hMt"/>
+                            <constraint firstItem="bcT-fT-DaX" firstAttribute="leading" secondItem="lVt-jy-9gR" secondAttribute="trailing" constant="26" id="ITw-73-VMa"/>
+                            <constraint firstItem="mN1-QM-8UU" firstAttribute="baseline" secondItem="bcT-fT-DaX" secondAttribute="baseline" id="LDZ-bQ-YtD"/>
+                            <constraint firstItem="mN1-QM-8UU" firstAttribute="centerX" secondItem="z8G-37-pqL" secondAttribute="centerX" id="MSd-C4-Sdt"/>
+                            <constraint firstItem="mN1-QM-8UU" firstAttribute="centerX" secondItem="egN-nX-3Rc" secondAttribute="centerX" id="Yy4-ST-HE1"/>
+                            <constraint firstItem="lVt-jy-9gR" firstAttribute="top" secondItem="z8G-37-pqL" secondAttribute="bottom" constant="46" id="bfy-O7-lJs"/>
+                            <constraint firstAttribute="trailing" secondItem="z8G-37-pqL" secondAttribute="trailing" id="bqv-Yk-Zkf"/>
+                            <constraint firstItem="rLJ-ol-D0L" firstAttribute="leading" secondItem="mN1-QM-8UU" secondAttribute="trailing" constant="74" id="nq5-a9-JmY"/>
+                            <constraint firstItem="bcT-fT-DaX" firstAttribute="baseline" secondItem="lVt-jy-9gR" secondAttribute="baseline" id="tXr-I7-xYC"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="mapView" destination="z8G-37-pqL" id="laT-iZ-sEJ"/>
+                        <outlet property="tableView" destination="egN-nX-3Rc" id="vjP-3M-oRG"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
