--- a/ElevationTest/Base.lproj/Main.storyboard
+++ b/ElevationTest/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4510" systemVersion="12E55" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13A603" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
         <deployment defaultVersion="1536" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -120,6 +120,7 @@
                     </view>
                     <connections>
                         <outlet property="mapView" destination="z8G-37-pqL" id="laT-iZ-sEJ"/>
+                        <outlet property="saveButton" destination="mN1-QM-8UU" id="nVM-HX-dwF"/>
                         <outlet property="tableView" destination="egN-nX-3Rc" id="vjP-3M-oRG"/>
                     </connections>
                 </viewController>
